deploy/chart/templates/docker-passthrough-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-nginx-passthrough
  namespace: infra-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker-nginx-passthrough
  template:
    metadata:
      labels:
        app: docker-nginx-passthrough
    spec:
      containers:
        - name: docker-nginx-passthrough
          image: nginx:1.19.6
          ports:
            - containerPort: 443
          volumeMounts:
            - mountPath: /var/www/cert
              name: tls
      volumes:
        - name: tls
          secret:
            secretName: docker-nginx-passthrough-cert
