deploy/chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexus-ingress
  annotations:
    cert-manager.io/cluster-issuer: craigmiller160-letsencrypt-cluster-issuer
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/proxy-body-size: 1000m
spec:
  ingressClassName: public
  rules:
    - host: nexus.craigmiller160.us
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: nexus-standard
                port:
                  number: 80
    - host: nexus-docker.craigmiller160.us
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: nexus-docker
                port:
                  number: 80
  tls:
    - secretName: nexus-ingress-secret
      hosts:
        - nexus.craigmiller160.us
        - nexus-docker.craigmiller160.us
